# infernode

./: CMakeLists.txt  README.md  package.xml
include/: trtinfer.hpp
include/yolov7/: main.cpp
src/: trtinfer.cpp
src/exec/: trtinfer_exec.cpp
